fix(QIcon): only add overflow: hidden to Material Icons

--- a/ui/src/components/icon/QIcon.sass
+++ b/ui/src/components/icon/QIcon.sass
@@ -1,5 +1,4 @@
 .q-icon
-  overflow: hidden
   line-height: 1
   width: 1em
   height: 1em
@@ -36,3 +35,9 @@
   align-items: center
   justify-content: center
   vertical-align: middle
+
+.material-icons,
+.material-icons-outlined,
+.material-icons-round,
+.material-icons-sharp
+  overflow: hidden
