--- a/ui/src/components/icon/QIcon.styl
+++ b/ui/src/components/icon/QIcon.styl
@@ -1,5 +1,4 @@
 .q-icon
-  overflow: hidden
   line-height: 1
   width: 1em
   height: 1em
@@ -37,3 +36,8 @@
   justify-content: center
   vertical-align: middle
 
+.material-icons,
+.material-icons-outlined,
+.material-icons-round,
+.material-icons-sharp
+  overflow: hidden
